--- a/gen/Makefile
+++ b/gen/Makefile
@@ -1,9 +1,9 @@
 SHELL=bash
 
-CAMLC=$(shell command -v ocamlc.opt || command -v ocamlc || echo missing_ocamlc)
-CAMLOPT=$(shell command -v ocamlopt.opt || command -v ocamlopt || echo missing_ocamlopt)
-CAMLCINCLUDES=str.cma -I ../build p1.cma
-CAMLOPTINCLUDES=str.cmxa -I ../build p1.cmxa
+CAMLC=ocamlfind ocamlc
+CAMLOPT=ocamlfind ocamlopt
+CAMLCINCLUDES=-package str -I ../build p1.cma
+CAMLOPTINCLUDES=$(CAMLCINCLUDES:.cma=.cmxa)
 
 P1_GEN=../build/p1_gen.native
 
@@ -13,6 +13,8 @@ all:
 	make clean
 	make before_all
 	make test.native
+
+test:
 	./test.native test.txt
 
 before_all:
@@ -22,7 +24,7 @@ test.ml: test.g
 	$(P1_GEN) -g $< >$@
 
 $(EXECS:.ml=.native): %.native: %.ml
-	$(CAMLOPT) $(COMPFLAGS) $(CAMLOPTINCLUDES) -o $@ $<
+	$(CAMLOPT) $(COMPFLAGS) $(CAMLOPTINCLUDES) -linkpkg -o $@ $<
 
 clean: 
 	rm -f *.{cmi,cmx,native,o} test.ml
